<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports" />

    <!-- Empty placeholder so FAB sits in the center gap -->
    <item
        android:id="@+id/placeholder"
        android:icon="@android:color/transparent"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_alerts" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>